Fixed overflow-y on ios devices because of 100vh

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -15,8 +15,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 50vw;
+  height: 100%;
+  width: 50%;
   font-size: 300px;
 }
 .score:first-of-type {
