--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,9 @@ body {
   font-family: 'Roboto', sans-serif;
   height: 100%;
 }
+div#__next {
+  height: 100%;
+}
 
 a {
   color: inherit;
